Some lines and unnecessary variable deleted

--- a/OpenCV/Makefile
+++ b/OpenCV/Makefile
@@ -3,4 +3,4 @@ CFLAGS	= `pkg-config --cflags opencv`
 LIBS	= `pkg-config --libs opencv`
 
 imgGrayScale:	imgGrayScale.cu
-	$(CUDAC) $(CFLAGS) imgGrayScale.cu $(LIBS) -o res_imgGrayScale
+	$(CUDAC) $(CFLAGS) imgGrayScale.cu $(LIBS) -o imgGrayScale
