--- a/CUDA/matrixMult/Makefile
+++ b/CUDA/matrixMult/Makefile
@@ -3,7 +3,7 @@ CUDAC 	= nvcc
 all: matrixMult
 
 matrixMult:	matrixMult.cu
-	$(CUDAC) matrixMult.cu -o matrixMult
+	$(CUDAC) matrixMult.cu -o matrixMult -O3
 
 clean:
 	rm -f matrixMult
