Errors fixed, and csv files generated

--- a/CUDA/matrixMult_V2_tiled/Makefile
+++ b/CUDA/matrixMult_V2_tiled/Makefile
@@ -1,9 +1,11 @@
 CUDAC 	= nvcc
 
+FLAGS 	= -O3
+
 all: matrixMult_V2
 
 matrixMult_V2:	matrixMult_V2.cu
-	$(CUDAC) matrixMult_V2.cu -o matrixMult_V2 -O3
+	$(CUDAC) matrixMult_V2.cu -o matrixMult_V2 $(FLAGS)
 
 clean:
 	rm -f matrixMult_V2
