--- a/CUDA/ImageConvolution/V2/Makefile
+++ b/CUDA/ImageConvolution/V2/Makefile
@@ -4,7 +4,7 @@ LIBS	= `pkg-config --libs opencv`
 
 all: ImageConvolution_V2
 
-ImageConvolution:	ImageConvolution_V2.cu
+ImageConvolution_V2:	ImageConvolution_V2.cu
 	$(CUDAC) $(CFLAGS) ImageConvolution_V2.cu $(LIBS) -o ImageConvolution_V2
 
 clean:
