--- a/CUDA/ImageConvolution/V2/Makefile
+++ b/CUDA/ImageConvolution/V2/Makefile
@@ -1,11 +1,11 @@
 CUDAC 	= nvcc
-CFLAGS	= `pkg-config --cflags opencv` -O3 -arch=compute_52
+CFLAGS	= `pkg-config --cflags opencv`
 LIBS	= `pkg-config --libs opencv`
 
 all: ImageConvolution_V2
 
 ImageConvolution_V2:	ImageConvolution_V2.cu
-	$(CUDAC) $(CFLAGS) ImageConvolution_V2.cu $(LIBS) -o ImageConvolution_V2 -
+	$(CUDAC) $(CFLAGS) -lineinfo ImageConvolution_V2.cu $(LIBS) -o ImageConvolution_V2 -O3 -arch=compute_52
 
 clean:
 	rm -f ImageConvolution_V2
