Minor changes on Makefile

--- a/ToneMapping/Makefile
+++ b/ToneMapping/Makefile
@@ -2,7 +2,9 @@ CUDAC = nvcc
 CFLAGS = `pkg-config --cflags opencv`
 LIBS = `pkg-config --libs opencv`
 
+all: tmo
+
 tmo: tmo.cu
-	$(CUDAC) $(LIBS) -o tmo tmo.cu $(CFLAGS)
+	$(CUDAC) $(LIBS) -lineinfo -o tmo tmo.cu $(CFLAGS) -O3 -arch=compute_52
 clean:
-	rm tmo
+	rm -f tmo
